@@ -1,36 +1,23 @@
 #
 # Build stage
 #
-FROM debian:bullseye-slim as build-env
-
-# make filter
-RUN apt-get update && apt-get install -y python3-pip python3-setuptools git wget
+FROM openjdk:17-slim-bullseye as build-env-java
+RUN export DEBIAN_FRONTEND=noninteractive \
+  && apt-get update && apt-get install -y git python3-pip
 RUN pip3 install pandoc-plantuml-filter
 RUN git clone https://github.com/timofurrer/pandoc-mermaid-filter.git && cd pandoc-mermaid-filter && python3 setup.py install && cd ..
 
-# make slim-jdk
-RUN wget https://download.java.net/java/GA/jdk17.0.2/dfd4a8d0985749f896bed50d7138ee7f/8/GPL/openjdk-17.0.2_linux-x64_bin.tar.gz -P /tmp/
-RUN tar xfvz /tmp/openjdk-17.0.2_linux-x64_bin.tar.gz -C /tmp/
-RUN /tmp/jdk-17.0.2/bin/jlink --output /opt/openjdk-17-slim \
-    --add-modules java.base,java.datatransfer,java.desktop,java.logging,java.prefs,java.scripting,java.xml
-
 # make plant UML
+RUN export DEBIAN_FRONTEND=noninteractive \
+  && apt-get update && apt-get install -y wget
 RUN mkdir -p /opt/plantuml/ 
 RUN wget https://github.com/plantuml/plantuml/releases/download/v1.2022.1/plantuml-1.2022.1.jar -P /opt/plantuml/ 
 RUN echo '#!/bin/bash\n\
-    /opt/openjdk-17-slim/bin/java -jar /opt/plantuml/plantuml-1.2022.1.jar $@' > /usr/bin/plantuml
+    /usr/local/openjdk-17/bin/java -jar /opt/plantuml/plantuml-1.2022.1.jar $@' > /usr/bin/plantuml
 RUN chmod a+x /usr/bin/plantuml
 
-RUN export DEBIAN_FRONTEND=noninteractive \
-  && apt-get update \
-  && apt-get install -y -q \
-  wget \
-  && wget -O- https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add \
-  && echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list \
-  && apt-get update && apt-get install -y -q yarn \
-  && apt-get -y -q autoremove \
-  && rm -rf /var/lib/apt/lists/
-
+# make mermaid
+FROM node:17-bullseye-slim as build-env-node
 RUN yarn add mermaid mermaid.cli
 
 #
@@ -47,10 +34,8 @@ RUN export DEBIAN_FRONTEND=noninteractive \
   libfreetype6 \
   fontconfig \
   git \
-  #texlive-latex-base \
-  #texlive-fonts-recommended \
-  #texlive-latex-extra \
-  #texlive-xetex \
+  nano \
+  # puppeteer dependencies
   libx11-xcb-dev \
   libxcomposite-dev \
   libxcursor-dev \
@@ -64,30 +49,34 @@ RUN export DEBIAN_FRONTEND=noninteractive \
   libpango1.0-dev \
   libgtk-3-dev \
   libnss3 \
-  nano \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
 
 RUN ln -s /usr/bin/python3 /usr/bin/python
 
-COPY --from=build-env /usr/local/lib/python3.9/dist-packages/ /usr/local/lib/python3.9/dist-packages/
-COPY --from=build-env /usr/bin/plantuml /usr/bin/plantuml
-COPY --from=build-env /usr/local/bin/pandoc-plantuml /usr/local/bin/pandoc-plantuml
-COPY --from=build-env /opt/plantuml/ /opt/plantuml/
-COPY --from=build-env /usr/local/bin/pandoc-mermaid /usr/local/bin/pandoc-mermaid
-COPY --from=build-env /opt/openjdk-17-slim/ /opt/openjdk-17-slim/
-COPY --from=build-env /node_modules /usr/local/lib/node_modules
+COPY --from=build-env-java /usr/bin/plantuml /usr/bin/plantuml
+COPY --from=build-env-java /opt/plantuml /opt/plantuml
+COPY --from=build-env-java /usr/local/openjdk-17 /usr/local/openjdk-17
+
+COPY --from=build-env-java /usr/local/lib/python3.9/dist-packages /usr/local/lib/python3.9/dist-packages
+COPY --from=build-env-java /usr/local/bin/pandoc-plantuml /usr/local/bin/pandoc-plantuml
+COPY --from=build-env-java /usr/local/bin/pandoc-mermaid /usr/local/bin/pandoc-mermaid
+
+COPY --from=build-env-node /node_modules /usr/local/lib/node_modules
+
 RUN ln -sf /usr/local/lib/node_modules/.bin/mmdc /usr/bin/mermaid
 
+# puppeteer conf
 RUN mkdir /opt/puppeteer
 RUN echo "{\"args\": [\"--no-sandbox\", \"--disable-setuid-sandbox\"]}" > /opt/puppeteer/puppeteer.json
-
 ENV PUPPETEER_CFG=/opt/puppeteer/puppeteer.json
 
-RUN useradd -u 1000 pandoc
+RUN useradd pandoc
+
+RUN mkdir /var/docs && chown pandoc /var/docs
 
 USER pandoc
 
 WORKDIR /var/docs/
 
-ENTRYPOINT ["pandoc", "--filter", "pandoc-plantuml"]
+ENTRYPOINT ["pandoc", "--filter", "pandoc-plantuml", "--filter", "pandoc-mermaid"]
